--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,17 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Version from Tag
+        run: |
+          echo "VERSION=${GITHUB_REF:11}" >> $GITHUB_ENV
+          echo "VERSION=${GITHUB_REF:11}"
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
       - name: Publish package
-        run: ./gradlew publish
+        run: ./gradlew -Pversion=${VERSION} publish
         env:
           SONATYPE_USER: ${{ secrets.SONATYPE_USER }}
           SONATYPE_PWD: ${{ secrets.SONATYPE_PWD }}
